--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="alert mt-4" role="alert" id="div_respuesta" style="display: none;"></div>
     </div>
 
-    <script src="resources/jquery/jquery.slim.min.js"></script>
+    <script src="resources/jquery/jquery.min.js"></script>
     <script src="resources/popper/popper.min.js"></script>
     <script src="resources/bootstrap/js/bootstrap.min.js"></script>
     <script src="app/controllers/index.js"></script>
