--- a/vehiculos.html
+++ b/vehiculos.html
@@ -119,6 +119,7 @@
     <script src="resources/popper/popper.min.js"></script>
     <script src="resources/bootstrap/js/bootstrap.min.js"></script>
     <script src="resources/sweetalert/sweetalert2.all.min.js"></script>
+    <script src="app/controllers/vehiculos.js"></script>
 </body>
 
 </html>
